--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="contain">
         <h2>نموذج ارسال فكرة مشروع للفريق</h2>
     </div>
-    <form action="https://formsubmit.co/saleh26054096@gmail.com"method="post">
+    <form action="https://formsubmit.co/omniamaharem500600@gmail.com"method="post">
         <div class="form-group">
             <label for="name">الاسم</label>
             <input type="text" name="الاسم" id="name"required placeholder="name">
@@ -43,3 +43,4 @@
 </body>
 
 </html>
+
