Update index.html for project submission form

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar" >    
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,18 +13,28 @@
     <div class="contain">
         <h2>نموذج ارسال فكرة مشروع للفريق</h2>
     </div>
-    <form action="https://formsubmit.co/omniamaharem500600@gmail.com"method="post">
+    <form action="https://formsubmit.co/saleh26054096@gmail.com"method="post">
         <div class="form-group">
             <label for="name">الاسم</label>
             <input type="text" name="الاسم" id="name"required placeholder="name">
         </div>
         <div class="form-group">
             <label for="id">الرقم التعريفي (ID):</label>
-            <input type="text" name="الرقم التعريفي" id="id"required placeholder="ID">
+            <input type="text" name="الرقم التغريفي" id="id"required placeholder="ID">
         </div>
         <div class="form-group">
             <label for="whatsapp">رقم الواتساب:</label>
             <input type="tel" name="رقم الواتساب"pattern="[0-9]+"title="الرجاء ادخال ارقام فقط" id="whatsapp"required placeholder="whatsapp number">
+        </div>
+        <div class="form-group">
+            <label for="name_project">اسم المشروع :</label>
+            <input type="tel" name=" name_project" title="name_project" id="name_project"required placeholder="Name Project">
+        </div>
+        <div class="form-group">
+        <div class="form-group">
+            <label for="name_team">اسم الفريق :</label>
+            <input type="tel" name="name_team" title="name_team" id="name_team"required placeholder="Name Team">
+
         </div>
         <div class="form-group">
             <label for="project_idea">فكرة المشروع</label>
@@ -41,6 +51,4 @@
         from Eng\Saleh mhrous
     </div>
 </body>
-
 </html>
-
