Fix HTML structure and correct encoding issues

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class="form-group">
             <label for="id">الرقم التعريفي (ID):</label>
-            <input type="text" name="الرقم التغريفي" id="id"required placeholder="ID">
+            <input type="text" name="الرقم التعريفي" id="id"required placeholder="ID">
         </div>
         <div class="form-group">
             <label for="whatsapp">رقم الواتساب:</label>
@@ -52,3 +52,4 @@
     </div>
 </body>
 </html>
+
