--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
         </div>
         <div class="form-group">
             <label for="name_project">اسم المشروع :</label>
-            <input type="tel" name=" name_project" title="name_project" id="name_project"required placeholder="Name Project">
+            <input type="text" name=" name_project" title="name_project" id="name_project"required placeholder="Name Project">
         </div>
         <div class="form-group">
         <div class="form-group">
             <label for="name_team">اسم الفريق :</label>
-            <input type="tel" name="name_team" title="name_team" id="name_team"required placeholder="Name Team">
+            <input type="text" name="name_team" title="name_team" id="name_team"required placeholder="Name Team">
 
         </div>
         <div class="form-group">
@@ -52,4 +52,5 @@
     </div>
 </body>
 </html>
+
 
